--- a/app/src/main/res/drawable/toolbar_border.xml
+++ b/app/src/main/res/drawable/toolbar_border.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/gold"/>
         </shape>
     </item>
-    <item android:bottom="3dp" android:top="3dp">
+    <item android:bottom="3dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/light_black"/>
         </shape>
