--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="light_black">#31363F</color>
     <color name="pale_blue">#7AA2E3</color>
     <color name="navy_blue">#000080</color>
-    <color name="gold">#FFD700</color>
+    <color name="gold">#FFC107</color>
     <color name="orange">#FFAF45</color>
     <color name="pale_green">#007F73</color>
     <color name="light_grey">#F5F5F5</color>
