--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/post"
     android:elevation="20dp"
     android:background="@color/white"
     android:padding="16dp">
@@ -40,8 +41,8 @@
         <!-- Comment button -->
         <ImageButton
             android:id="@+id/likeButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:background="@color/white"
             android:contentDescription="@string/likebutton"
@@ -50,8 +51,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/actionButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/circular_button"
             android:layout_marginStart="16dp"
             android:text="@string/action"
@@ -59,8 +60,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/commentButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/circular_button"
             android:layout_marginStart="16dp"
             android:text="@string/comment"
