--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <item
-    android:id="@+id/profile"
+    android:id="@+id/profileButton"
     android:title="@string/profile"
     android:icon="@drawable/ic_launcher_foreground"
     app:showAsAction="always" />
