--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
-    android:layout_height="match_parent">
+    android:id="@+id/homepage"
+    android:layout_gravity="center"
+    android:background="@drawable/opening_wallpaper"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/topToolbar"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/toolbar_border"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme">
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_gravity="center"
-            android:src="@drawable/ecosnap_transparent_final"
-            android:contentDescription="@string/logo" />
-    </androidx.appcompat.widget.Toolbar>
-
-    <ScrollView
-        android:layout_width="match_parent"
+        android:textSize="50dp"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottomToolbar"
-        android:layout_below="@+id/topToolbar"
-        android:id="@+id/scroll_view"
-        android:background="@color/cream">
-
-        <LinearLayout
-            android:id="@+id/main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/cream"
-            android:orientation="vertical"
-            tools:context=".MainActivity">
-
-            <com.google.android.material.appbar.AppBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-            </com.google.android.material.appbar.AppBarLayout>
-
-            <!-- Content Area -->
-
-        </LinearLayout>
-    </ScrollView>
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/bottomToolbar"
-        android:layout_alignParentBottom="true">
-
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/light_black"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" >
-            <ImageButton
-                android:layout_gravity="center"
-                android:background="@color/light_black"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/post_plus"
-                android:id="@+id/newPost"
-                android:contentDescription="@string/todo" />
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
-
+        android:gravity="center"
+        android:text="EcoSnap"
+        android:id="@+id/entry"/>
 </RelativeLayout>
