--- a/app/src/main/res/layout/participate.xml
+++ b/app/src/main/res/layout/participate.xml
@@ -4,14 +4,14 @@
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@drawable/opening_wallpaper">
 
     <!-- Top Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/topToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/toolbar_border"
+        android:background="@android:color/transparent"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme">
 
@@ -19,7 +19,7 @@
             android:layout_width="200dp"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="center"
-            android:src="@drawable/ecosnap_transparent_final"
+            android:src="@drawable/ecosnap_transparent"
             android:contentDescription="@string/logo" />
     </androidx.appcompat.widget.Toolbar>
 
@@ -119,10 +119,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/create_post_button_design"
                 android:text="@string/donate"
-                android:textSize="18sp"
                 android:textColor="@color/white"
-                android:background="@drawable/create_post_button_design" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
