--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:textSize="50dp"
+        android:textColor="@color/black"
+        android:fontFamily="cursive"
+        android:textSize="50sp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="EcoSnap"
