--- a/app/src/main/res/drawable/toolbar_border.xml
+++ b/app/src/main/res/drawable/toolbar_border.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Border layer with light black color -->
-    <item android:bottom="3dp">
+    <!-- Black line at the bottom -->
+    <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cream" /> <!-- Change color to light black -->
-            <!-- Set corner radius for rounded borders -->
+            <stroke
+                android:width="1dp"
+                android:color="#000000" />
         </shape>
     </item>
 </layer-list>
