--- a/app/src/main/res/layout/post_creation.xml
+++ b/app/src/main/res/layout/post_creation.xml
@@ -37,7 +37,7 @@
             <!-- Image View -->
             <ImageView
                 android:id="@+id/imageView"
-                android:background="@color/white"
+                android:background="@drawable/toolbar_border"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop" />
@@ -75,8 +75,11 @@
                 android:id="@+id/etTitle"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
-                android:background="@drawable/edittext_border"
+                android:background="@drawable/toolbar_border"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/black"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:hint="Title"
                 android:padding="16dp"
                 android:layout_marginTop="16dp" />
@@ -86,8 +89,10 @@
                 android:id="@+id/etDescription"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:background="@drawable/edittext_border"
+                android:background="@drawable/toolbar_border"
                 android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:hint="Description"
                 android:inputType="textMultiLine"
                 android:minLines="3"
