--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -79,7 +79,7 @@
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:id="@+id/heading"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_height="50dp"/>
             <ListView
@@ -96,7 +96,7 @@
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:id="@+id/heading2"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_height="50dp"/>
 
