--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -9,9 +9,36 @@
     android:padding="16dp">
 
     <!-- Your existing content here -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/visitPost"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
+            android:clipToOutline="true"
+            android:background="@drawable/circular_profile_photo"
+            android:src="@drawable/ic_launcher_background"/>
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Username"
+            android:textSize="16sp"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/postImage"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="centerCrop"
