--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -40,7 +40,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="24dp"
                 android:src="@drawable/ic_launcher_background"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:clipToOutline="true"
                 android:background="@drawable/circular_profile_photo" />
 
