--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/comments"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
-</LinearLayout>
+    <!-- Horizontal LinearLayout at the bottom -->
+    <ScrollView
+        android:id="@+id/commentsScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/llBottom"
+        android:layout_marginBottom="0dp">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="70dp" />
+        <!-- Content inside the ScrollView -->
+
+    </ScrollView>
+
+    <LinearLayout
+        android:background="@android:color/transparent"
+        android:id="@+id/llBottom"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <!-- EditText -->
+        <EditText
+            android:id="@+id/addComment"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
+            android:layout_weight="15"
+            android:hint="Enter text here"
+            android:inputType="text"/>
+
+        <!-- Button -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/submitButton"
+            android:layout_weight="1"
+            android:layout_width="30dp"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:background="@drawable/create_post_button_design"
+            android:layout_height="wrap_content"
+            android:text=">"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
