--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -1,47 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/opening_wallpaper"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:hint="username"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_width="250dp"
+        android:textColorHint="@color/black"
+        android:layout_height="50dp"
+        android:textAlignment="center"
+        android:hint="Enter username"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="250dp"/>
+
     <EditText
         android:id="@+id/password"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:hint="password"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:textColorHint="@color/black"
+        android:textAlignment="center"
+        android:hint="Enter password"
         android:inputType="textPassword"
-        android:layout_gravity="center"
+        android:layout_below="@id/username"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"/>
-    <Button
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
         android:layout_width="100dp"
+        android:background="@drawable/create_post_button_design"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:layout_gravity="center"
-        />
+        android:layout_below="@id/password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:id="@+id/newuser"
         android:text="New user?"
-        android:layout_gravity="center"/>
+        android:textStyle="bold"
+        android:layout_below="@id/btnLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"/>
+
     <TextView
         android:id="@+id/registerRedirect"
         android:layout_width="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
-        android:text="Register here"
-        android:layout_gravity="center"
-        />
+        android:text="Click here to register"
+        android:layout_below="@id/newuser"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"/>
 
-
-
-</LinearLayout>
+</RelativeLayout>
