--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -2,48 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@drawable/opening_wallpaper"
+    android:orientation="vertical"
+    android:gravity="center_vertical">
 
     <EditText
         android:id="@+id/username"
         android:layout_width="200dp"
+        android:textAlignment="center"
+        android:textColorHint="@color/black"
         android:layout_height="40dp"
-        android:hint="username"
+        android:hint="Enter username"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="10dp"/>
+
     <EditText
         android:id="@+id/email"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:hint="email"
+        android:textAlignment="center"
+        android:textColorHint="@color/black"
+        android:hint="Enter email"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"/>
+
     <EditText
         android:id="@+id/password"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:hint="password"
+        android:textColorHint="@color/black"
+        android:hint="Enter password"
+        android:textAlignment="center"
         android:inputType="textPassword"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"/>
-    <Button
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnRegister"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/create_post_button_design"
         android:text="Register"
         android:layout_gravity="center"
-        />
+        android:layout_marginTop="10dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already Registered?"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"/>
+
     <TextView
         android:id="@+id/loginRedirect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_gravity="center"
-        />
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
