--- a/app/src/main/res/layout/main_app.xml
+++ b/app/src/main/res/layout/main_app.xml
@@ -71,6 +71,13 @@
             android:background="@android:color/transparent"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" >
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/logout"
+                android:layout_gravity="end"
+                android:layout_marginEnd="20dp"
+                android:text="Logout"/>
             <ImageButton
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
