--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_below="@id/honor_points"
                 android:layout_marginTop="16dp"
-                android:text="Activities Joined:"
+                android:text="Activities Joined: 2"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:id="@+id/heading"
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_below="@id/activities_participated"
                 android:layout_marginTop="16dp"
-                android:text="Posts:"
+                android:text="Posts: 4"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:id="@+id/heading2"
